fix: 게시글 조회 시, 게시글의 좋아요 수 함께 반환